--- a/linux/.tmux.conf
+++ b/linux/.tmux.conf
@@ -4,7 +4,8 @@
 unbind C-b
 set -g prefix ^A
 bind a send-prefix
-bind C-y run-shell -b "tmux show-buffer > ~/clipboard"
+bind-key C-a last-window
+#bind C-y run-shell -b "tmux show-buffer > ~/clipboard"
 
 
 # 256 colors please
@@ -43,14 +44,22 @@ set -g status-interval 5
 # Inconsolata-dz-Powerline Theme:
 #[fg=white,bg=colour39,noreverse,bold]
 #green hostname: fg=colour22,bg=colour148
-set -g status-left '#[fg=colour235,bg=colour252,bold] ❐ #S #[fg=colour252,bg=colour238,nobold]⮀#[fg=colour245,bg=colour238,bold] #(whoami) #[fg=colour238,bg=colour234,nobold]⮀'
-set -g status-right '#[fg=colour238,bg=colour234,nobold]⮂#[fg=colour245,bg=colour238] #h #[fg=colour252]⮂#[fg=colour235,bg=colour252,bold] #(wemux status_users) '
-set -g window-status-format "#[fg=white,bg=colour234] #I #W "
-set -g window-status-current-format "#[fg=colour234,bg=colour39]⮀#[fg=colour25,bg=colour39,noreverse,bold] #I ⮁ #W #[fg=colour39,bg=colour234,nobold]⮀"
+#set -g status-left '#[fg=colour235,bg=colour252,bold] ❐ #S #[fg=colour252,bg=colour238,nobold]⮀#[fg=colour245,bg=colour238,bold] #(whoami) #[fg=colour238,bg=colour234,nobold]⮀'
+#set -g status-right '#[fg=colour238,bg=colour234,nobold]⮂#[fg=colour245,bg=colour238] #h #[fg=colour252]⮂#[fg=colour235,bg=colour252,bold] #(wemux status_users) '
+#set -g window-status-format "#[fg=white,bg=colour234] #I #W "
+#set -g window-status-current-format "#[fg=colour234,bg=colour39]⮀#[fg=colour25,bg=colour39,noreverse,bold] #I ⮁ #W #[fg=colour39,bg=colour234,nobold]⮀"
 
 # Alternate Theme for shells without Inconsolata-dz-Powerline:
 # set -g status-left ' #[bold]❐ #S#[default] ⣿'
 # set -g status-right '#[bold]#(whoami) ● #H#[default] ⡇ #[fg=blue]%H:%M#[default] '
+
+# Set status bar
+set -g status-bg black
+set -g status-fg white
+set -g status-left '#[fg=green]#H'
+set -g status-right '#[fg=yellow]#(uptime | cut -d "," -f 2-)'
+set-window-option -g window-status-current-bg red
+
 
 # Activity
 setw -g monitor-activity on
@@ -70,4 +79,4 @@ set -g mode-mouse on
 
 
 set -g mode-keys vi
-
+set-option -g history-limit 20000
