[modify] Show current time instead of uptime on status-right pannel. [modify] Disable mouse mode.

--- a/linux/.tmux.conf
+++ b/linux/.tmux.conf
@@ -24,6 +24,8 @@ set-option -g status-utf8 on
 #set-option -g status-right "#(/home/Jack/tools/tmux-powerline/powerline.sh right)"
 
 
+set-option -g set-titles on
+set-option -g set-titles-string '#H:#S.#I.#P #W #T'  # window number,program name, active(or not)
 
 # Bad Wolf
 set -g status-fg white
@@ -57,12 +59,12 @@ set -g status-interval 5
 set -g status-bg black
 set -g status-fg white
 set -g status-left '#[fg=green]#H'
-set -g status-right '#[fg=yellow]#(uptime | cut -d "," -f 2-)'
+set -g status-right '#[fg=yellow]%y-%m-%d %H:%M'
 set-window-option -g window-status-current-bg red
 
 
 # Activity
-setw -g monitor-activity on
+set -g monitor-activity on
 set -g visual-activity on
 
 # renumber windows sequentially after closing any of them
@@ -72,10 +74,11 @@ set -g visual-activity on
 set -sg escape-time 0
 
 # allow mouse to select which pane to use
-set -g mouse-select-pane on
-
+set -g mouse-select-pane off
+set -g mouse-select-window off
+set -g mouse-resize-pane off
 # mouse scroll in tmux
-set -g mode-mouse on
+set -g mode-mouse off
 
 
 set -g mode-keys vi
