--- a/linux/.tmux.conf
+++ b/linux/.tmux.conf
@@ -83,3 +83,19 @@ set -g mode-mouse off
 
 set -g mode-keys vi
 set-option -g history-limit 20000
+# Toggle mouse on
+bind m \
+    set -g mode-mouse on \;\
+    set -g mouse-resize-pane on \;\
+    set -g mouse-select-pane on \;\
+    set -g mouse-select-window on \;\
+    display 'Mouse: ON'
+
+
+# Toggle mouse off
+bind M \
+    set -g mode-mouse off \;\
+    set -g mouse-resize-pane off \;\
+    set -g mouse-select-pane off \;\
+    set -g mouse-select-window off \;\
+    display 'Mouse: OFF'
